language-server/src/tests/snapshots/gleam_language_server__tests__action__desugar_nested_use_expressions_picks_inner_under_cursor_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  use a, b <- wibble(1, 2)\n  use a, b <- wibble(a, b)\n  todo\n}\n\nfn wibble(n, m, f) {\n    f(1, 2)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  use a, b <- wibble(1, 2)
           ▔▔▔↑           
  use a, b <- wibble(a, b)
  todo
}

fn wibble(n, m, f) {
    f(1, 2)
}


----- AFTER ACTION

pub fn main() {
  wibble(1, 2, fn(a, b) {
    use a, b <- wibble(a, b)
    todo
  })
}

fn wibble(n, m, f) {
    f(1, 2)
}
