language-server/src/tests/snapshots/gleam_language_server__tests__action__discard_unused_variable_triggered_at_alternative_pattern_list.snap
---
source: language-server/src/tests/action.rs
expression: "fn wobble(wibble) {\n  case wibble {\n    [0, x, y] | [1, x, y] | [2, x, y] -> x\n    _ -> 0\n  }\n}"
---
----- BEFORE ACTION
fn wobble(wibble) {
  case wibble {
    [0, x, y] | [1, x, y] | [2, x, y] -> x
           ↑                              
    _ -> 0
  }
}


----- AFTER ACTION
fn wobble(wibble) {
  case wibble {
    [0, x, _y] | [1, x, y] | [2, x, y] -> x
    _ -> 0
  }
}
