language-server/src/tests/snapshots/gleam_language_server__tests__action__discard_unused_variable_triggered_at_alternative_pattern_list_assignments_3.snap
---
source: language-server/src/tests/action.rs
expression: "fn wobble(wibble) {\n  case wibble {\n    [0, ..y] | [0, 1, ..] as y | y -> todo\n    _ -> todo\n  }\n}"
---
----- BEFORE ACTION
fn wobble(wibble) {
  case wibble {
    [0, ..y] | [0, 1, ..] as y | y -> todo
                                 ↑        
    _ -> todo
  }
}


----- AFTER ACTION
fn wobble(wibble) {
  case wibble {
    [0, .._y] | [0, 1, ..] | _y -> todo
    _ -> todo
  }
}
